# multilabel-text-classification

./: .gitignore  README.md  pyproject.toml
src/: predict_emotion.py  train_emotion_bert.py
