[project]
name = "multilabel-text-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "transformers>=4.57.6",
]
